tweaked the second version

--- a/helloworld.html
+++ b/helloworld.html
@@ -4,6 +4,6 @@
         <title>learning git</title>
     </head>
     <body>
-        hello, world
+        hello, world, hello again
     </body>
 </html>
