added a css file and modified the html file

--- a/helloworld.html
+++ b/helloworld.html
@@ -2,9 +2,30 @@
 <html>
     <head>
         <title>learning git</title>
+        <link rel="stylesheet" href="helloworld.css">
     </head>
     <body>
-        hello, world, hello again
-
+        <h1>My webpage!</h1>
+        <p>here is a table and an atom</p>
+        <img src="../../class notes/chemistry/atom.jpg" >
+        <table >
+            <tr >
+                <td></td>
+                <th>Urgent</th>
+                <th>Not urgent</th>
+            </tr>
+            <tr>
+                <th>Important</th>
+                <td> finishing the edx course</td>
+                <td>Methods SAC next week</td>
+            </tr>
+            <tr>
+                <th>Not Important</th>
+                <td></td>
+                <td> </td>
+            </tr>
+        
+        </table>
+        
     </body>
 </html>
