--- a/helloworld.html
+++ b/helloworld.html
@@ -7,7 +7,7 @@
     <body>
         <h1>My webpage!</h1>
         <p>here is a table and an atom</p>
-        <img src="../../class notes/chemistry/atom.jpg" >
+        <img src="atom.jpg" >
         <table >
             <tr >
                 <td></td>
